import React from 'react';
import renderer from 'react-test-renderer';
import { ProductImage, ProductCard } from '../../src/components';
import { product2 } from './data/products';


describe('Pruebas en Image', () => {

    test('should de mostrar la imagen', () => {

        const wrapper = renderer.create(
            <ProductImage img={"./coffe-mug.png"} />
        )

        expect(wrapper.toJSON()).toMatchSnapshot()

    })


    test('should de mostrar la imagen del padre', () => {

        const wrapper = renderer.create(
            <ProductCard product={product2}>
                {
                    () => (
                        <ProductImage />
                    )
                }
            </ProductCard>
        )

        expect(wrapper.toJSON()).toMatchSnapshot()

    })


})